--- a/1 lesson/public/index.html
+++ b/1 lesson/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>TypeScript-1</title>
-    <script src="js/main.js"></script>
-    <script src="js/primitive-types.js"></script>
-    <script src="js/event-listener.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/primitive-types.js"></script>
+    <script src="./js/event-listener.js"></script>
     <style>
         .input {
             display: block;
